All_Component_DX/force-app/main/default/objects/Pricing_Rule__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>NTE</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
            </value>
            <value>
                <fullName>Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>