All_Component_DX/force-app/main/default/objects/Pricing_Rule__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Plan</label>
    <referenceTo>Service_Plan__c</referenceTo>
    <relationshipLabel>Pricing Rule</relationshipLabel>
    <relationshipName>Pricing_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>