All_Component_DX/force-app/main/default/objects/Pricing_Rule__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Pricing Rule</relationshipLabel>
    <relationshipName>Pricing_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>