All_Component_DX/force-app/main/default/objects/Pricing_Rule__c/validationRules/SVMX_ServicePlan_Or_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMX_ServicePlan_Or_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>IF(LEN(Service_Contract__r.Id) &gt; 0, IF(LEN( Service_Plan__r.Id ) &gt; 0, TRUE, FALSE), IF(LEN(Service_Plan__r.Id) &gt; 0, FALSE, TRUE))</errorConditionFormula>
    <errorMessage>Pricing Rule must be associated with either Service Plan or Service Contract, but not both.</errorMessage>
</ValidationRule>